# brief-calibration

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
brief_calibration/: __init__.py  __main__.py  cli.py  ledger.py  report.py  score.py
data/fixtures/: 2026-Q2-brief-calls.yaml
data/ledger/: 2026-Q2.jsonl
decisions/: DEC-CAL-001-rubric-v0.md
decisions/calibration-memo/: 2026-Q2.md
docs/: METHODOLOGY.md  first-pr.md
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
tests/: test_cli.py  test_ledger.py  test_report.py  test_score.py
