[project]
name = "brief-calibration"
version = "0.1.0"
description = "Brier-score the Field Brief's stated confidence against subsequent reality."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Vignesh Gopalakrishnan" }]

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
brief-cal = "brief_calibration.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brief_calibration"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
